--- a/User Auth/requirements.txt
+++ b/User Auth/requirements.txt
@@ -3,7 +3,10 @@ aiohttp==3.11.14
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+argcomplete==3.6.1
+arrow==1.3.0
 attrs==25.3.0
+b2==4.3.1
 b2sdk==2.8.0
 bcrypt==4.2.0
 blinker==1.8.2
@@ -13,6 +16,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.7
 deprecation==2.1.0
+docutils==0.21.2
 evdev==1.7.1
 Flask==3.0.3
 Flask-Sitemap==0.4.0
@@ -35,6 +39,8 @@ MarkupSafe==3.0.2
 multidict==6.2.0
 mysql-connector-python==9.1.0
 packaging==24.2
+phx-class-registry==4.1.0
+platformdirs==4.3.7
 pluggy==1.5.0
 postgrest==1.0.1
 propcache==0.3.1
@@ -50,6 +56,7 @@ python-dotenv==1.0.1
 python-xlib==0.33
 realtime==2.4.2
 requests==2.32.3
+rst2ansi==0.1.5
 s3transfer==0.11.2
 six==1.16.0
 sniffio==1.3.1
@@ -57,6 +64,9 @@ storage3==0.11.3
 StrEnum==0.4.15
 supabase==2.15.0
 supafunc==0.9.4
+tabulate==0.9.0
+tqdm==4.67.1
+types-python-dateutil==2.9.0.20241206
 typing-inspection==0.4.0
 typing_extensions==4.12.2
 urllib3==2.3.0
