--- a/User Auth/requirements.txt
+++ b/User Auth/requirements.txt
@@ -12,6 +12,7 @@ bcrypt==4.2.0
 blinker==1.8.2
 boto3==1.36.26
 botocore==1.36.26
+Brotli==1.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.7
@@ -20,6 +21,7 @@ deprecation==2.1.0
 docutils==0.21.2
 evdev==1.7.1
 Flask==3.0.3
+Flask-Compress==1.17
 Flask-Limiter==3.12
 Flask-Sitemap==0.4.0
 flask-talisman==1.1.0
@@ -83,3 +85,4 @@ websockets==14.2
 Werkzeug==3.1.2
 wrapt==1.17.2
 yarl==1.18.3
+zstandard==0.23.0
